Add deploy script for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "springdale-school-website",
+  "homepage": "https://mradulbais15.github.io/springdale-school-project-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
